# cppdash

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: OptionVariables.cmake  install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/cppdash/: cppdash.hpp
source/: cppdash.cpp
src/: client.cpp  client.hpp
test/: CMakeLists.txt
test/source/: cppdash_test.cpp
tests/: CMakeLists.txt  run-tests.py
